可过滤：复习、链接添加

--- a/_posts/JS原生基础相关/2020-03-24-数组方法统计2 - 细说reduce.md
+++ b/_posts/JS原生基础相关/2020-03-24-数组方法统计2 - 细说reduce.md
@@ -14,7 +14,11 @@ typora-root-url: ..
 
 # 数组方法统计 - reduce
 
-`reduce()` 方法对数组中的每个元素执行一个由您提供的**reducer**函数(升序执行)，您的 **reducer** 函数的返回值分配给累计器，该返回值在数组的**每个迭代中被记住**，并最后汇总成为最终的单个返回值。
+`reduce()` 方法：数组中的每个元素执行一个由您提供的**reducer**函数(升序执行)，
+
+您的 **reducer** 函数的返回值分配给累计器，
+
+该返回值在数组的**每个迭代中被记住**，并最后汇总成为最终的单个返回值。
 
 be like :
 
@@ -52,7 +56,7 @@ callback(accumulator, currentValue[, currentIndex[, array]])
 
 - 如果提供了`initialValue`，`accumulator` **取值为 `initialValue`**，`currentValue` **取数组中的第一个值**；
 
-- 如果没有提供 `initialValue`，那么 `accumulator` 取数组中的第一个值，`currentValue`**取数组中的第二个值**。
+- 如果没有提供 `initialValue`，那么 `accumulator` **取数组中的第一个值**，`currentValue`**取数组中的第二个值**。
 
 案例1：按属性对Object进行分类
 
@@ -111,7 +115,7 @@ runPromiseInSequence(promiseArr, 1)
 
 其中 `f3` 的返回值被 `Promise` 包裹起来了
 
-<img src="/img/assets_2019/image-20210707203616267.png" alt="image-20210707203616267" style="zoom:75%;" />
+<img src="../img/assets_2019/image-20210707203616267.png" alt="image-20210707203616267" style="zoom:75%;" />
 
 案例3：使用reduce实现map
 
