--- a/_posts/JS原生基础相关/2021-09-07-可迭代对象.md
+++ b/_posts/JS原生基础相关/2021-09-07-可迭代对象.md
@@ -63,7 +63,16 @@ typora-root-url: ..
 
 ​	每个结构的 `Symbol.iterator`  (本身就是一个函数 - 是当前数据结构默认的遍历器生成函数) ：
 
-<img src="/../img/assets_2019/image-20210907185011123.png" alt="image-20210907185011123" style="zoom:40%;" /><img src="/../img/assets_2019/image-20210907185312659.png" alt="image-20210907185312659" style="zoom:25%;" /><img src="/../img/assets_2019/image-20210907191504159.png" alt="image-20210907191504159" style="zoom:60%;" /><img src="/../img/assets_2019/image-20210907191622352.png" alt="image-20210907191622352" style="zoom:55%;" />
+<img src="/../img/assets_2019/image-20210907185011123.png" alt="image-20210907185011123" style="zoom:45%;" />
+
+<img src="/../img/assets_2019/image-20210907185312659.png" alt="image-20210907185312659" style="zoom:35%;" />
+
+
+<img src="/../img/assets_2019/image-20210907191504159.png" alt="image-20210907191504159" style="zoom:45%;" /><img src="/../img/assets_2019/image-20210907191622352.png" alt="image-20210907191622352"  style="zoom:45%;" />
+
+
+
+
 
 【补充】：可以看到 Set 对象的默认迭代器是 map.entries ；而 Map 对象的是 map.values
 
@@ -78,7 +87,7 @@ typora-root-url: ..
 ```js
 let set = new Set().add('a').add('b').add('c');
 
-let [x,y] = set; // x='a'; y='b'
+let [x,y] = set; // x='a'; y='b' -> 按序赋值
 
 let [first, ...rest] = set; // first='a'; rest=['b','c'];
 ```
