--- a/_posts/工作经验沉淀：全栈工作记录 - 技术/2022-11-21- fetch.md
+++ b/_posts/工作经验沉淀：全栈工作记录 - 技术/2022-11-21- fetch.md
@@ -90,6 +90,9 @@ async function fetchBase(apiurl, options) {
     }
 
     if (opt.query) {
+        // 语法：querystring.stringify(obj, [sep=‘&’], [eq=‘=’])
+        // 作用：将对象转换成字符串，默认用 & 连接多个参数，用 = 连接键值
+        // 例如：将{ foo: 'bar', baz: ['qux', 'quux'], corge: '' } 转换为-->'foo=bar&baz=qux&baz=quux&corge=' 
         url = `${url}?${queryString.stringify(opt.query)}`;
     }
 
@@ -99,7 +102,6 @@ async function fetchBase(apiurl, options) {
     const res = await fetch(url, opt);
 
     try {
-        // 如果是HEAD请求，说明不需要返回数据
         let json = { code: 200 };
 
         if (opt.raw) {
@@ -107,7 +109,7 @@ async function fetchBase(apiurl, options) {
             return res.text();
         }
 
-        // 如果是HEAD请求，不需要data
+        // 如果是HEAD请求，说明不需要返回数据
         if (!opt.method.toUpperCase() !== 'HEAD') {
             json = await parseJSON(res);
         }
@@ -136,6 +138,7 @@ async function fetchBase(apiurl, options) {
             // 状态码为 302 时跳转至登录页
             message.error('用户未登录或登录状态失效，请登录后再试');
             setTimeout(() => {
+                // encodeURIComponent用于编码字符为UTF-8的编码，比encodeURI编码更多字符，例如?=&
                 window.location.href = `${api.login}?redirect=${encodeURIComponent(window.location.href)}`;
             }, 1000);
         } else if (err.code === 301 || err.resultCode === 301) {
