add: 补充红宝书部分笔记图片

--- a/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
@@ -25,6 +25,8 @@ typora-root-url: ..
 
 ​    其中，所有浏览器都对`ECMAScript`第3版的支持大体上都还不错，而对`ECMAScript5`的支持程度越来越高，但对`DOM`的支持则彼此像差比较多。对已经正式纳入`HTML5`标准的`BOM`来说，尽管各浏览器都实现了某些众所周知的共同特性，但其他特性还是会因为浏览器而异。
 
+![《红宝书》-2](/../img/assets_2023/《红宝书》-2.jpg)
+
 # 第二章 在HTML中使用JavaScript 小结
 
 ​    把`JavaScript`插入到`HTML`页面中要使用`<script>`元素。使用这个元素可以把`JavaScript`嵌入到`HTML`页面中，让脚本与标记混合在一起；也可以包含外部的`JavaScript`文件。
@@ -39,19 +41,45 @@ typora-root-url: ..
 
 ​    另外，使用`<noscript>`元素可以指定在不支持脚本的浏览器中显示替代的内容。但在启用了脚本的情况下，浏览器不会显示`<noscript>`元素中的任何内容。
 
+![《红宝书》-3](/../img/assets_2023/《红宝书》-3.jpg)
+
+
+
 # 第三章 基本概念 小结
 
-​    `JavaScript`的核心语言特性在`ECMA-262`中是以名为`ECMAScript`的伪语言的形式来定义的。`ECMAScript`中包含了所有基本的语法、操作符、数据类型以及完成基本的计算任务所必须的对象，但没有对取得输入和产生输出的机制作出规定。理解`ECMAScript`及其纷繁复杂的各种细节，是理解其在`Web`浏览器中的实现----`JavaScript`的关键。目前大多数实现所遵循的都是`ECMA-262`第3版，但很多也已经着手开始实现第5版了。
+​    `JavaScript`的核心语言特性在`ECMA-262`中是以名为`ECMAScript`的伪语言的形式来定义的。`ECMAScript`中包含了所有基本的语法、操作符、数据类型以及完成基本的计算任务所必须的对象，但没有对取得输入和产生输出的机制作出规定。理解`ECMAScript`及其纷繁复杂的各种细节，是理解其在`Web`浏览器中的实现----`JavaScript`的关键。
 
 ​    以下简要总结了`ECMAScript`中基本的要素。
 
-1. `ECMAScript`中基本数据类型包括`Undefined`、`Null`、`Boolean`、`Number`、`String`。
-2. 与其他语言不同，`ECMAScript`没有为整数和浮点数值分别定义不同的数据类型，`Number`类型可用于表示所有数值。
-3. `ECMAScript`中也有一种复杂的数据类型，即`Object`类型，该类型是这门语言中所有对象的基础类型。
+1. `ECMAScript`中基本数据类型包括`Undefined`、`Null`、`Boolean`、`Number`、`String`和`Symbol`。
+2. 与其他语言不同，`ECMAScript`不区分整数和浮点数，只有`Number`一种数值数据类型。
+3. `Object`类型是一种复杂的数据类型，是这门语言中所有对象的基础类型。
 4. 严格模式为这门语言中容易出错的地方施加了限制。
 5. `ECMAScript`提供了很多与 C 及其他类 C 语言中相同的基本操作符，包括符号操作符、布尔操作符、关系操作符、相等操作符及赋值操作符等。
-6. `ECMAScript`从其他语言中借鉴了很多流控制语句，例如 if 语句、 for 语句和 switch 语句等。`ECMAScript`中的函数与其他语言中的函数有诸多不同之处。
-7. 无须指定函数的返回值，因为任何`ECMAScript`函数都可以在任何时候返回任何值。
-8. `ECMAScript`中也没有函数签名的概念，因为其函数参数是以一个包含零或多个值的数组的形式传递的。
-9. 可以向`ECMAScript`函数传递任意数量的参数，并且可以通过`arguments`对象来访问这些参数。
-10. 由于不存在函数签名的特性，`ECMAScript`函数不能重载。
+6. `ECMAScript`从其他语言中借鉴了很多流控制语句，例如 if 语句、 for 语句和 switch 语句等。
+
+
+
+`ECMAScript`中的函数与其他语言中的函数有诸多不同之处。
+
+1. 无须指定函数的返回值，因为任何`ECMAScript`函数都可以在任何时候返回任何值。
+2. `ECMAScript`中也没有函数签名的概念，因为其**函数参数**是以**一个包含零或多个值的数组的形式**传递的。
+3. 不指定返回值的函数实际上会返回特殊值 `undefined`。
+
+
+
+![《红宝书》-4](/../img/assets_2023/:Users:haoling:Downloads:《红宝书》-4.jpg)
+
+![《红宝书》-5](/../img/assets_2023/《红宝书》-5.jpg)
+
+![《红宝书》-6](/../img/assets_2023/《红宝书》-6.jpg)
+
+![《红宝书》-7 2](/../img/assets_2023/《红宝书》-7 2.jpg)
+
+![《红宝书》-8](/../img/assets_2023/《红宝书》-8.jpg)
+
+![《红宝书》-9](/../img/assets_2023/《红宝书》-9.jpg)
+
+![《红宝书》-10](/../img/assets_2023/《红宝书》-10.jpg)
+
+![《红宝书》-11](/../img/assets_2023/《红宝书》-11.jpg)
