--- a/_posts/《红宝书相关博客》/2019-06-05-第四章 变量、作用域和内存问题 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-05-第四章 变量、作用域和内存问题 小结.md
@@ -10,26 +10,26 @@ tags:
     - 《JavaScript高级程序设计》
 typora-root-url: ..
 ---
-​    `JavaScript`变量可以用来保存两种类型的值：基本类型值和引用类型值。基本类型的值源自以下5种基本了数据类型：`Undefined`、`Null`、`Boolean`、`Number`、`String`。
+​    `JavaScript`变量可以用来保存两种类型的值：基本类型值和引用类型值。基本类型的值源自以下6种基本了数据类型：`Undefined`、`Null`、`Boolean`、`Number`、`String`、`Symbol`
 
 ###     基本类型值和引用类型值具有以下特点：
 
-1. 基本类型值在内存中占据**固定大小的空间**， 因此被**保存在栈**中；
+1. 基本类型值在内存中占据**固定大小的空间**， 因此被**保存在栈内存**中；
 2. 从一个变量向另一个变量复制基本类型的值，会创建这个值的一个副本；
 3. 引用类型的值是对象，**保存在堆内存**中；
 4. 包含引用类型值的变量实际上包含的并不是对象本身 ，而是**指向该对象的指针**；
 5. 从一个变量向另一个变量复制引用类型的值，复制的其实是指针，因此两个变量最终都指向同一个对象；
 6. 确定一个值是**哪种基本类型可以使用`typeof`操作符**，而确定一个值是**哪种引用类型可以使用`instanceof`操作符**。
 
-​    所有变量（包括基本类型和引用类型）都存在于一个**执行环境（也称为作用域）**当中，这个执行环境决定了变量的生命周期，以及哪一部分代码可以访问其中的变量。
+​    所有变量（包括基本类型和引用类型）都存在于一个**执行上下文（也称为作用域）**当中，这个上下文决定了变量的生命周期，以及哪一部分代码可以访问其中的变量。
 
-###     以下是关于执行环境的几点总结：
+###     以下是关于执行上下文（作用域）的几点总结：
 
-1. 执行环境有全局执行环境（也称为全局环境）和函数执行环境之分；
-2. 每次进入一个新执行环境，都会创建一个用于搜索变量和函数的**作用域链**；
-3. 函数的局部环境**不仅有权访问函数作用域中的变量，而且有权访问其包含（父）环境，乃至全局环境**；
-4. 全局环境只能访问在全局环境中定义的变量和函数，而**不能直接访问局部环境中的任何数据**；
-5. 变量的执行环境有助于确定应该何时释放内存。
+1. 执行上下文有全局上下文、函数上下文、块级上下文之分；
+2. 代码执行流每次进入一个新上下文，都会创建一个用于搜索变量和函数的**作用域链**；
+3. 函数的局部上下文**不仅有权访问自己作用域中的变量，而且有权访问其包含上下文，乃至全局上下文中的变量**；
+4. 全局上下文只能访问在全局上下文中定义的变量和函数，而**不能直接访问局部上下文中的任何数据**；
+5. 变量的执行上下文有助于确定应该何时释放内存。
 
 ​    `JavaScript`是一门具有**自动垃圾收集机制**的编程语言，开发人员不必关心内存分配和回收问题。
 
@@ -37,6 +37,8 @@ typora-root-url: ..
 
 1. 离开作用域的值将被自动标记为可以回收，因此将在垃圾收集期间被删除；
 2. **“ 标记清除 ”** 是目前最主流的垃圾收集算法，这种算法的思想是给当前不使用的值加上标记，然后再回收其内存；
-3. 另一种垃圾收集算法是 **“ 引用计数 ”** ，这种算法的思想是跟踪记录所有值被引用的次数。`JavaScript`引擎目前都不再使用这种算法；但在 IE 中访问非原生`JavaScript`对象（如`DOM`元素）时，这种算法仍然可能会导致问题；
+3. 另一种垃圾收集策略是 **“ 引用计数 ”** ，这种算法的思想是跟踪记录所有值被引用的次数。`JavaScript`引擎目前都不再使用这种算法；但在 IE 中访问非原生`JavaScript`对象（如`DOM`元素）时，这种算法仍然可能会导致问题；
 4. 当代码中存在循环引用现象时，" 引用计数 "算法就会导致问题；
 5. 解除变量的引用不仅有助于消除循环引用现象，而且对垃圾收集也有好处。为了确保有效的回收内存，应该及时解除不再使用的全局对象、全局对象属性以及循环引用变量的引用。
+
+![《红宝书》-12](/../img/assets_2023/《红宝书》-12.jpg)
