edit：修改红宝书版本（3->4）

--- a/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-04-第一章-第三章 简介、基本概念 小结.md
@@ -76,10 +76,10 @@ typora-root-url: ..
 
 ![《红宝书》-7 2](/../img/assets_2023/《红宝书》-7 2.jpg)
 
-![《红宝书》-8](/../img/assets_2023/《红宝书》-8.jpg)
+![《红宝书》-8 2](/../img/assets_2023/《红宝书》-8 2.jpg)
 
 ![《红宝书》-9](/../img/assets_2023/《红宝书》-9.jpg)
 
-![《红宝书》-10](/../img/assets_2023/《红宝书》-10.jpg)
+![《红宝书》-10 2](/../img/assets_2023/《红宝书》-2.png)
 
 ![《红宝书》-11](/../img/assets_2023/《红宝书》-11.jpg)
