--- a/_posts/《红宝书相关博客》/2019-06-05-第四章 变量、作用域和内存问题 小结.md
+++ b/_posts/《红宝书相关博客》/2019-06-05-第四章 变量、作用域和内存问题 小结.md
@@ -7,7 +7,7 @@ author:
 header-img: 
 catalog: true
 tags:
-    - 《JavaScript高级程序设计》
+    - 《JavaScript高级程序设计4》
 typora-root-url: ..
 ---
 ​    `JavaScript`变量可以用来保存两种类型的值：基本类型值和引用类型值。基本类型的值源自以下6种基本了数据类型：`Undefined`、`Null`、`Boolean`、`Number`、`String`、`Symbol`
@@ -41,4 +41,5 @@ typora-root-url: ..
 4. 当代码中存在循环引用现象时，" 引用计数 "算法就会导致问题；
 5. 解除变量的引用不仅有助于消除循环引用现象，而且对垃圾收集也有好处。为了确保有效的回收内存，应该及时解除不再使用的全局对象、全局对象属性以及循环引用变量的引用。
 
-![《红宝书》-12](/../img/assets_2023/《红宝书》-12.jpg)
+![《红宝书》-12 2](/../img/assets_2023/《红宝书》-12 2.jpg)
+
