--- a/_posts/工作经验沉淀：软实力/2022-07-31-Mac 好用的软件记录.md
+++ b/_posts/工作经验沉淀：软实力/2022-07-31-Mac 好用的软件记录.md
@@ -25,13 +25,13 @@ typora-root-url: ..
 
   就是保留所有复制过的记录，可以搜索，可以预览，在一些需要频繁切换两个页面进行复制黏贴的场景特别适用
 
-<img src="/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731103732919.png" alt="image-20220731103732919" style="zoom:50%;" />
+<img src="../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731103732919.png" alt="image-20220731103732919" style="zoom:50%;" />
 
 - 搜索浏览器标签
 
   就是可以直接按照关键词搜索浏览器收藏的标签，虽然我把学习工作相关的标签都划分了文件夹，但是实在是太多了，可以明文搜索我真的太爱了，模糊搜索 YYDS
 
-  <img src="/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731104123139.png" alt="image-20220731104123139" style="zoom:40%;" />
+  <img src="../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731104123139.png" alt="image-20220731104123139" style="zoom:40%;" />
 
 - 搜索文件
 
@@ -47,7 +47,7 @@ typora-root-url: ..
 
 我惊为天人，看过就忘星人的救命稻草，在对比一些代码，在 ctrl+c、ctrl+v 的时候截图置顶看下代码差异，啧，贼香。或者写东西的时候，没有第二个屏幕也可以美美实现边看边写，巴适～
 
-<img src="/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731105616530.png" alt="image-20220731105616530" style="zoom:40%;" />
+<img src="../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731105616530.png" alt="image-20220731105616530" style="zoom:40%;" />
 
 - 截长图
 
@@ -61,7 +61,7 @@ typora-root-url: ..
 
 其实写东西的过程中，我就只是希望不要有别的东西来吸引我的注意力，Typora 界面啥都没有，很简单，我就专注写就好了，就很好
 
-<img src="/img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731110553839.png" alt="image-20220731110553839" style="zoom:55%;" />
+<img src="../img/assets_2019/:Users:haoling:Library:Application Support:typora-user-images:image-20220731110553839.png" alt="image-20220731110553839" style="zoom:55%;" />
 
 ....慢慢填坑
 
