--- a/_posts/面试题整理/2019-07-10-html相关 面试问题.md
+++ b/_posts/面试题整理/2019-07-10-html相关 面试问题.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < 面试题整理 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -15,70 +16,71 @@ typora-root-url: ..
 
 # html相关 面试问题
 
-#### 1. h5新标签有哪些？为什么要加强语义化？
+#### 1. h5新标签有哪些？为什么要加强语义化？<!doctype html>作用？
 
-新标签：
+加强语义化原因：1.**默认样式不一样**   2.有SEO优化作用
 
-**文档类型设定**：`<!doctype html>`；
+①文档类型设定：`<!doctype html>`
 
-**字符设定**：`<meta charset="utf-8">`；
+- **文档类型声明**，目的是告诉标准通用标记语言 **解析器** 要使用什么样的文档类型定义（DTD）来解析文档
+- **声明必须是HTML文档的第一行，位于html标签之前**
 
-**常用新标签**：
+②**字符设定**：`<meta charset="utf-8">`
 
-​	`header`，一般作为网页的**头部**使用，可以多个；
+③常用新标签：
 
-​	`footer`，底部，**不一定是文档最底部**，可以多个；
+- `header`，一般作为网页的头部使用，**可以多个**
 
-​	 `aside`，**侧边**栏；
+- **`footer`**，底部，**不一定是文档最底部**，可以多个
 
-​	 `nav`，**导航**栏；
+- **`aside`**，**侧边**栏
 
-​	`article`，独立内容区域，与session类似，**用于文章blog、帖子、短文或者回复、评论**等；
+- **`nav`**，**导航**栏
 
-​	`section`，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签；
+- **`article`**，独立内容区域，与session类似，用于文章blog、帖子、短文或者回复、评论等
 
-​	`datalist `，**标签定义选项列表**，请与 input 元素配合使用该元素；
+- **`section`**，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签
+
+- **`datalist `**，**标签定义选项列表**，请与 input 元素配合使用该元素
 
 ```html
-<input type="text" value="输入" list="TFboys"/> <!--  input里面用list -->
-<datalist id="TFboys">   <!-- datalist里面用id -->  
-        <option>易烊千玺</option>
-        <option>王俊凯</option>
-        <option>王源</option>
+<!-- input里面用list属性，指向对应 id 的 datalist -->
+<input type="text" value="输入" list="TFboys"/> 
+<datalist id="TFboys">   <!-- 指定id的datalist -->  
+    <option>易烊千玺</option>
+    <option>王俊凯</option>
+    <option>王源</option>
 </datalist>
 ```
 
-​	`fieldset`，可**将表单内的相关元素分组**，打包legend（为`fieldset`元素定义标题）使用；
+- `fieldset`，可**将表单内的相关元素分组**，和`legend` 一起使用
+
+![img](/../img/assets_2023/1460000039079632.png)
 
 ```html
-	<fieldset>
-	<legend>用户登录</legend>
-    	用户名: <input type="text"><br />
-		密　码: <input type="password">
-    </fieldset>
+<fieldset>
+    <legend>Form</legend> <!-- 定义标题 -->
+    <div>
+        <label>Name :</label><input type="text"><br />
+    </div>
+    <div>
+        <label>Name :</label><input type="password"><br />
+    </div>
+</fieldset>
 ```
 
-​	 `address`，**标签定义文档或文章的作者/拥有者的联系信息**，字体样式默认倾斜；
-​    ​`time`，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示；
-​    `hgroup`，专门用来包含标题**h标签的分组**；
+- `address`，**标签定义文档或文章的作者/拥有者的联系信息**，字体样式默认倾斜
+- `time`，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示
+- `hgroup`，专门用来包含标题**h标签的分组**；
+- `detail`，*细节、详情* ，open属性：默认展开，summary相当于详情的标题
 
-​	`detail`，*细节、详情* ，open属性：默认展开，summary相当于详情的标题；
+④ `input`标签的增强
 
+- 新增了许多input **type属性**：`email`、`tel`、`url`、`number`、`search`搜索框，加强语义、`range`自由拖动滑块、`time`、`date`日期、`datetime`时间、`month`、`week`
 
+-	新增了许多input的 **属性**：`placeholder`占位符，默认文字、`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`autocomplete`、`required`必填项、`accesskey`规定激活元素的快捷键
 
-​	**新增了许多input type属性**：`email`、`tel`、`url`、`number`、`search搜索框，加强语义`、`range自由拖动滑块`、`time`、`date日期`、`datetime时间`、`month`、`week`
-​    
-
-​	**新增了许多input的属性**：`placeholder占位符，默认文字`、`autofocus页面加载时自动获得焦点`、`multiple多文件上传`、`autocomplete`、`required必填项`、`accesskey规定激活元素的快捷键`
-​    
-
-​	**多媒体标签**：`embed定义嵌入的内容`、`audio播放音频`、`video播放视频`；
-
-​	`src导入`，`autoplay自动播放`、`controls是否默认显示播放件`、`loop循环播放`
-
-​	......
-
-​    原因：1.默认样式不一样 ；2.有SEO优化作用；
+⑤**多媒体标签**：`embed`定义嵌入的内容、`audio`播放音频、`video`播放视频、`src`导入，`autoplay`自动播放、`controls`是否默认显示播放件、`loop`循环播放
 
 
 
@@ -86,51 +88,31 @@ typora-root-url: ..
 
 参考博客：[行内元素+块级元素](https://www.cnblogs.com/yc8930143/p/7237456.html)
 
-行内元素：b、span、a、u、em、i、img、input、select、label、textarea、button、strong、br
+- 行内元素：b、span、**【a】**、u、em、i、select、label、textarea、**button**、strong、br
 
-块级元素：div、h1～h6、ol、ul、dl、li、table、td、th、tr、dd、dt、p、caption、address、hr
+-	块级元素：div、h1～h6、ol、ul、dl、li、table、th、tr、dd、dt、**【p】**、caption、address、hr
 
-空元素：area、meta、link
+- **行内块元素**：例如 img 、 input、td
 
-- 行内元素的特点：
+- 空元素：area、meta、link
 
-  1、行内元素**只能容纳文本或者其他行内元素**。
+行内元素的特点：
 
-  2、**宽度只与内容有关**。
+1. 行内元素**只能容纳文本或者其他行内元素**，和其他元素都 **在一行上** -- 水平方向排列【特殊情况：a链接内不能嵌套其他链接】
+2. **宽度只与内容有关**，宽和高都不可调整（**只能够设置 `line-height`**）
+3.  `margin`、`padding` 属性值的 **左右可改变，上下无效**
 
-  3、和其他元素都**在一行上**。
+块级元素的特点：
 
-  4、行高及 `margin`、`padding` 属性值的 **左右可改变，上下无效**。
+1. 可以容纳内联元素和其他块元素，但总是在新行上开始，**占据一整行** -- 垂直方向排列【特殊情况：p标签中不能嵌套div标签】
+2. **初始宽度** 始终是与浏览器宽度一样，**与内容无关**，宽高都可以设置
+3.  `margin`、`padding` 属性值 **都可控制**
 
-- 块级元素的特点：
+**行内块**元素的特点：
 
-  1、高度，行高以及外边距和内边距**都可控制**。
+1. 和其他元素同一行（行内元素特点）
 
-  2、总是在新行上开始，**占据一整行**。
-
-  3、它可以**容纳内联元素和其他块元素**。
-
-  4、**宽度**始终是与浏览器宽度一样，**与内容无关**。
-
-- 区别：
-
-  1、**行内元素**会在**一条直线上分列**，都是统一行的，水平方向排列。
-
-  ​	  **块级元素各盘踞一行**，垂直方向排列；块级元素重新行开端停止接着一个断行。
-
-  2、**行内元素**不可以包括块级元素，只能包容文本或许其余行内元素。
-
-  ​	  **块级元素**能够包括行内元素和块级元素，还能够包容内联元素和其余元素。
-
-  ​	【a链接内不能嵌套其他链接；p标签中不能嵌套div标签】
-
-  3、行内元素与块级元素属性的分歧，主要在盒模子属性上。
-
-  **行内元素**设置width无效，height无效（**能够设置line-height**），margin、padding设置左右有效。
-
-- 行内元素内嵌块级元素。高度被子元素撑大，而**宽度和父级一致**（父级是body就是body的宽度）。
-
-- **行内块元素**：例如`img` 、 `input` ，和其他元素同一行（行内元素特点），可以设置元素的宽高等（块级元素特点）。
+2. 可以设置元素的宽高等（块级元素特点）
 
 ```css
 /* 行内元素/内联元素 */
@@ -141,93 +123,26 @@ display:block;
 display:inline-block;
 ```
 
-- CSS给行内元素水平垂直居中
+补充：纯CSS实现水平垂直居中
+
+-	不论行内元素还是块级元素，【垂直】都是设置 `height` 和 `line-height`相等；
+
+- 【水平】可以分别用 `text-align: center` （行内元素）或者给 **设置宽度后** 的块级元素添加`margin: 0 auto`
 
 ```css
-span {
+span { /* 行内元素 */
     /* 水平 */
-    text-align: center;
+    text-align: center; 
     /* 垂直 */
-    height: 30px;
+    height: 30px; 
     line-height: 30px;
 }
-```
-
-- CSS给块级元素水平垂直居中
-
-```css
-div {
+div { /* 块级元素 */
     /* 水平 */
 	width: 100px;
-    margin: 0 auto;
+    margin: 0 auto; 
     /* 垂直 */
-    height: 30px;
+    height: 30px; 
     line-height: 30px;
 }
 ```
-
-
-
-#### 3.html中首行<!doctype>的作用？
-
-​	**文档类型声明**，目的是告诉标准通用标记语言解析器要使用什么样的文档类型定义（DTD）来解析文档；声明必须是HTML文档的第一行，位于html标签之前；
-
-
-
-#### 7.滚动条
-
-只要网页内容大于视窗，滚动条就会出现。
-
-目标：没有滚动条影响美观，但仍旧可以滚动
-
-**方法1**：在webkit内核的浏览器里可以定义滚动条样式，在CSS初始处定义
-
-```css
---Chrome--
-body::-webkit-scrollbar{
-	display:none;
-}
---IE/Edge--
-body{
-    -ms-overflow-style: none;
-}
---Firefox--
-html {
-    overflow: -moz-hidden-unscrollable; /*注意！若只打 hidden，chrome 的其它 hidden 会出问题*/
-    height: 100%;
-}
-
-body {
-	height: 100%;
-	width: calc(100vw + 18px); /*浏览器滚动条的长度大约是 18px*/
-	overflow: auto;
-}
-```
-
-方法2：在div外面再套一个div，内层是有滚动条的，但是我们看不到了
-
-外面的div设置overflow:hidden；
-
-里面的div设置 overflow-y: scroll;overflow-x: hidden;
-
-再设置外层div的width小于内层div的width。
-
-```html
-<div class="outer">
-    <div class="inner">     
-    </div>
-</div>
-```
-
-```css
-.outer{
-	overflow:hidden;
-    width:200px;
-}
-.inner{
-    overflow-y:scroll;
-    overflow-x:hidden;
-    width:220px;
-}
-```
-
