--- a/_posts/面试题整理/2024-04-23-面试题目复盘面试题目复盘（技术内容）.md
+++ b/_posts/面试题整理/2024-04-23-面试题目复盘面试题目复盘（技术内容）.md
@@ -23,7 +23,7 @@ typora-root-url: ..
 
 2、CDN了解么？它有哪些优化
 
-3、手写题 promise.all和sleep
+3、手写题 promise.all和 [sleep](https://codingwithalice.github.io/2021/04/13/18-2-Promise%E5%92%8CsetTimeout/)
 
 4、当代码 new Foo(…) 执行时,实际执行了哪些操作
 
@@ -47,9 +47,9 @@ typora-root-url: ..
 
 11、React的几个生命周期？在各个生命周期我们主要做些什么操作？
 
-12、React hooks 原理？底层的执行机制
+13、React hooks 原理？底层的执行机制
 
-12、支付宝过年收集五福，大年三十晚上10点开奖，上千万、上亿的流量，前端有没有什么方案，在中间层或者BFF有没有什么机制或者方案，缓解这种瞬时流量给后端带来的压力，并且能够保证用户体验
+14、支付宝过年收集五福，大年三十晚上10点开奖，上千万、上亿的流量，前端有没有什么方案，在中间层或者BFF有没有什么机制或者方案，缓解这种瞬时流量给后端带来的压力，并且能够保证用户体验
 
 - 在动画开始时就提前调用
 - BFF部署在有扩容能力的服务器上
