edit：隔天复习『』表示没想起来的内容

--- a/_posts/面试题整理/2019-07-10-html相关 面试问题.md
+++ b/_posts/面试题整理/2019-07-10-html相关 面试问题.md
@@ -18,12 +18,12 @@ typora-root-url: ..
 
 #### 1. h5新标签有哪些？为什么要加强语义化？<!doctype html>作用？
 
-加强语义化原因：1.**默认样式不一样**   2.有SEO优化作用
+加强语义化原因：1.『**<u>默认样式不一样</u>**』  2.有SEO优化作用
 
 ①文档类型设定：`<!doctype html>`
 
 - **文档类型声明**，目的是告诉标准通用标记语言 **解析器** 要使用什么样的文档类型定义（DTD）来解析文档
-- **声明必须是HTML文档的第一行，位于html标签之前**
+- 『**<u>声明必须是HTML文档的第一行，位于html标签之前</u>**』
 
 ②**字符设定**：`<meta charset="utf-8">`
 
@@ -33,13 +33,13 @@ typora-root-url: ..
 
 - **`footer`**，底部，**不一定是文档最底部**，可以多个
 
-- **`aside`**，**侧边**栏
+- 『**<u>aside</u>**』，侧边栏
 
 - **`nav`**，**导航**栏
 
 - **`article`**，独立内容区域，与session类似，用于文章blog、帖子、短文或者回复、评论等
 
-- **`section`**，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签
+- 『**<u>section</u>**』，代表某一个区域/分区/页面/文档的**一部分区域**，有独立的内容，但结构相近，就可以用section，范围比div大，语义比div更强，可以包含header、`h1-h6`……凸显语义的标签
 
 - **`datalist `**，**标签定义选项列表**，请与 input 元素配合使用该元素
 
@@ -70,15 +70,15 @@ typora-root-url: ..
 ```
 
 - `address`，**标签定义文档或文章的作者/拥有者的联系信息**，字体样式默认倾斜
-- `time`，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示
-- `hgroup`，专门用来包含标题**h标签的分组**；
-- `detail`，*细节、详情* ，open属性：默认展开，summary相当于详情的标题
+- 『<u>`time`</u>』，时间标签，主要用于搜索引擎和其它一些内容引擎特殊的解析和展示
+- 『<u>`hgroup`</u>』，专门用来包含标题**h标签的分组**；
+- 『<u>`detail`</u>』，*细节、详情* ，open属性：默认展开，summary相当于详情的标题
 
 ④ `input`标签的增强
 
-- 新增了许多input **type属性**：`email`、`tel`、`url`、`number`、`search`搜索框，加强语义、`range`自由拖动滑块、`time`、`date`日期、`datetime`时间、`month`、`week`
+- 新增了许多input **type属性**：『<u>`email`、`tel`、`url`</u>』、`number`、『<u>`search`搜索框，加强语义、`range`自由拖动滑块、`time`</u>』、`date`日期、`datetime`时间、`month`、`week`
 
--	新增了许多input的 **属性**：`placeholder`占位符，默认文字、`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`autocomplete`、`required`必填项、`accesskey`规定激活元素的快捷键
+-	新增了许多input的 **属性**：`placeholder`占位符，默认文字、『<u>`autofocus`页面加载时自动获得焦点、`multiple`多文件上传、`autocomplete`、`required`必填项、`accesskey`规定激活元素的快捷键</u>』
 
 ⑤**多媒体标签**：`embed`定义嵌入的内容、`audio`播放音频、`video`播放视频、`src`导入，`autoplay`自动播放、`controls`是否默认显示播放件、`loop`循环播放
 
@@ -88,9 +88,9 @@ typora-root-url: ..
 
 参考博客：[行内元素+块级元素](https://www.cnblogs.com/yc8930143/p/7237456.html)
 
-- 行内元素：b、span、**【a】**、u、em、i、select、label、textarea、**button**、strong、br
+- 行内元素：span、**『<u>a</u>』**、u、i、『<u>em、b、select、label、textarea、button、strong、**br**</u>』
 
--	块级元素：div、h1～h6、ol、ul、dl、li、table、th、tr、dd、dt、**【p】**、caption、address、hr
+-	块级元素：div、h1～h6、ol、ul、dl、li、table、th、tr、dd、dt、**p**、『<u>caption、address</u>』、hr
 
 - **行内块元素**：例如 img 、 input、td
 
@@ -99,14 +99,14 @@ typora-root-url: ..
 行内元素的特点：
 
 1. 行内元素**只能容纳文本或者其他行内元素**，和其他元素都 **在一行上** -- 水平方向排列【特殊情况：a链接内不能嵌套其他链接】
-2. **宽度只与内容有关**，宽和高都不可调整（**只能够设置 `line-height`**）
+2. **宽度只与内容有关**，宽和高都不可调整（『<u>**只能够设置 `line-height`**</u>』）
 3.  `margin`、`padding` 属性值的 **左右可改变，上下无效**
 
 块级元素的特点：
 
-1. 可以容纳内联元素和其他块元素，但总是在新行上开始，**占据一整行** -- 垂直方向排列【特殊情况：p标签中不能嵌套div标签】
+1. 可以容纳内联元素和其他块元素，但总是在新行上开始，**占据一整行** -- 垂直方向排列『<u>特殊情况：p标签中不能嵌套div标签</u>』
 2. **初始宽度** 始终是与浏览器宽度一样，**与内容无关**，宽高都可以设置
-3.  `margin`、`padding` 属性值 **都可控制**
+3.  `margin`、`padding  ` 属性值 **都可控制**
 
 **行内块**元素的特点：
 
