css：css动画比js动画好在哪儿？

--- a/_posts/css相关内容/2019-06-29-《精通CSS 第三版》.md
+++ b/_posts/css相关内容/2019-06-29-《精通CSS 第三版》.md
@@ -139,6 +139,8 @@ h3 {
 
 - #### 压印、浮雕标题.css
 
+<img src="/../img/assets_2023/image-20241012183034005.png" alt="image-20241012183034005" style="zoom:20%;" />
+
 ```css
 .impressed {
     background-color : #6990e1;
@@ -154,6 +156,8 @@ h3 {
 
 - #### 仿手写广告牌字体.css
 
+<img src="/../img/assets_2023/image-20241012182840878.png" alt="image-20241012182840878" style="zoom:10%;" />
+
 ```css
 h1 {
     font-family : Nunito ,"Arial Rounded MT Bold","Helvetica Rounded" , Arial,san-serif;
@@ -167,38 +171,6 @@ h1 {
         /* 以 1px 为单位累加 */
         -22px 22px 0 #743132,
         -23px 23px 0 #743132;
-}
-```
-
--  #### 3D阴影效果标题.css
-
-```css
-h1 {
-    font-family : Nunito ,"Arial Rounded MT Bold","Helvetica Rounded" , Arial,san-serif;
-    color : #d0bb78 ;
-    text-transform : uppercase;
-    font-weight:700;
-    text-shadow:
-    	/* 首先，各个方向上的白色阴影构成轮廓 */
-        -2px 2px 0 #fff,
-        0px 2px 0 #fff,
-        0px 3px 0 #fff,
-        3px 0px 0 #fff,
-        -3px 0px 0 #fff,
-        2px 2px 0 #fff,
-        2px -2px 0 #fff,
-        -2px -2px 0 #fff,
-        /* ......其次，交错叠加的阴影让颜色沿两个方向凸显 */
-        -3px 3px 0 #743b34,
-        -4px 3px 0 #a8564b,
-        -4px 5px 0 #743b34,
-        -5px 4px 0 #a8564b,
-        -5px 6px 0 #743b34,
-        /* ....继续叠加.... */
-        -22px 21px 0 #a8564d,
-        -22px 23px 0 #743b34,
-        -23px 22px 0 #a8564d,
-        -23px 24px 0 #743b34,
 }
 ```
 
@@ -246,7 +218,7 @@ border-right-color: transparent;
 ```css
 .author-image ,
 .author-info {
-    vertical-align:middle;
+    vertical-align: middle;
 }
 ```
 
@@ -256,7 +228,7 @@ border-right-color: transparent;
 .author-meta:before {
     content :'';
     display:inline-block;
-    vertical-align:middle;
+    vertical-align: middle;
     height:100%;
 }
 ```
