--- a/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
+++ b/_posts/css相关内容/2019-07-07-css中的动画特性可以用js实现，那为什么还要用css来实现？.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -15,23 +16,17 @@ typora-root-url: ..
 
 # css中的动画特性可以用js实现，那为什么还要用css来实现？
 
+CSS 动画的**渲染成本小**（硬件加速GPU、自然降级），**执行效率高**（避免回流重绘、预扫描加载快）
 
+详细如下：
 
-​	当您为 UI 元素采用较小的独立状态时，使用 CSS。 CSS 变换和动画非常适合于从侧面引入导航菜单，或显示工具提示。最后，可以使用 JavaScript 来控制状态，但动画本身是采用 CSS。**用CSS制作动画是让元素在屏幕上移动的最简单方法**。
+1、**硬件加速GPU**：浏览器对CSS动画专门做了优化，例如 **硬件加速（GPU加速）**
 
-​	**在需要对动画进行大量控制时，使用 JavaScript**。 Web Animations API 是一个基于标准的方法，现已在 Chrome 和 Opera 中提供。该方法可提供实际对象，非常适合复杂的对象导向型应用。在需要停止、暂停、减速或倒退时，JavaScript 也非常有用。
+2、**自然降级**：对于帧速表现不好的低版本浏览器，**CSS3可以做到自然降级**，而 JS 则需要撰写额外代码
 
-#### 那么如何从两者中抉择？
+3、**避免回流重绘**：CSS 动画可以在 **合成线程** 中完成，而 js 写的动画需要在 **主线程** 执行；CSS 动画只涉及到变换（transform）、透明度（opacity）等属性时，直接在 **合成层** 操作，有效避免了 **回流和重绘** 带来的性能损耗
 
-​	根据 Google Developer，**渲染线程分为 主线程 (main thread) 和 合成线程 (compositor thread)**。如果 CSS 动画**只是改变` transforms` 和` opacity`，这时整个 CSS 动画得以在 合成线程 完成（而JS动画则会在 主线程 执行**，然后触发合成线程进行下一步操作），在 JS 执行一些昂贵的任务时，主线程繁忙，CSS 动画由于使用了合成线程可以保持流畅。
+-	补充：渲染进程分为主线程和合成线程
 
-​	在许多情况下，也可以由合成线程来处理 `transforms` 和 `opacity` 属性值的更改。
-
-​	对于帧速表现不好的低版本浏览器，**CSS3可以做到自然降级，而JS则需要撰写额外代码**。
-
-​	CSS动画**有天然事件支持**（TransitionEnd、AnimationEnd，但是它们都需要针对浏览器加前缀），**JS则需要自己写事件**。
-
-​	如果有任何**动画触发绘画，布局或两者，则需要 “主线程” 才能完成工作。** 这对于基于 CSS 和 JavaScript 的动画都是如此，布局或绘制的开销可能会使与 CSS 或 JavaScript 执行相关的任何工作相形见绌，这使得问题没有实际意义。
-
-​	**CSS3有兼容性问题，而JS大多时候没有兼容性问题。**
+4、**预扫描，加载快**：CSS 可以预扫描下载和解析，无需等待 js 下载就可以开始动画
 
