css：css盒模型（记忆下属性值 content-box border-box）

--- a/_posts/css相关内容/2019-07-09-盒模型有哪些？有什么区别？.md
+++ b/_posts/css相关内容/2019-07-09-盒模型有哪些？有什么区别？.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -15,17 +16,21 @@ typora-root-url: ..
 
 # 盒模型有哪些？有什么区别？
 
+```css
+/* 注意记忆一下盒模型的值，经常忘记 */
+box-sizing: content-box; /* 默认值，标准盒模型 */
+box-sizing: border-box; /* IE盒模型 */
+```
 
+盒模型分为IE盒模型和W3C标准盒模型：
 
-盒模型分为**IE盒模型**和**W3C标准盒模型**。
-
-- **W3C 标准盒模型content-box**：设置属性width/height只包含内容content，不包含border和padding。
+- **W3C 标准盒模型**：`content-box`，设置属性width/height只 **包含内容content**，不包含『<u>border</u>』和padding
 
 <img src="/../img/assets_2019/image-20210619145623877.png" alt="image-20210619145623877" style="zoom:35%;" />
 
-- **IE 盒模型border-box**：属性width/height = content + padding + border。
+- **IE 盒模型**：`border-box`，属性width/height = content + padding + 『<u>border</u>』
 
 <img src="/../img/assets_2019/image-20210619145708455.png" alt="image-20210619145708455" style="zoom:33%;" />
 
-CSS 控制 ：**box-sizing**，默认值为**content-box，即标准盒模型**；**border-box则用的是IE盒模型**。
+
 
