--- a/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
+++ b/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
@@ -15,51 +15,43 @@ typora-root-url: ..
 
 # 为什么要清除浮动？怎么清除浮动？
 
-浮动详解看这篇文章：[带你彻底了解CSS浮动](https://segmentfault.com/a/1190000012739764)
+##### 清除浮动的原因（布局）：
 
-关键点：
+- **块级**元素认为浮动元素**不存在**；**行内**元素认为浮动元素**存在并且围绕**浮动元素摆放，影响布局
+    - 补充：浮动元素遵从尽可能靠左、靠上，尽可能一个挨着一个、不超过父级、不超过所在行最高点、不超过前一个浮动元素最高点这些原则摆放
 
-- 块级元素认为浮动元素不存在，但是浮动元素会影响行内元素的布局（ 环绕）-> 间接影响了块布局
+##### 经常出现的问题：高度塌陷
+
+​	浮动元素不能撑开父级元素。子盒子浮动，导致的父盒子内高度为 0 ，父级盒子不能被撑开，发生 **高度塌陷** 的情况。具象化：父级盒子**背景**不能显示；**边框**不能撑开；**margin和padding**不能正确显示
 
 
 
-**问题**：子盒子浮动导致的父盒子内高度为 0 ，父级盒子不能被撑开，发生**高度塌陷**的情况。
+##### 清除浮动的方法：
 
-**带来的负作用**：
+> 前两种分别是给父盒子添加高度/触发BFC重新排列，后两种都是在父级的末尾添加一个去除浮动的元素
 
-1. **背景**不能显示
-2. **边框**不能撑开
-3. **margin和padding值**不能正确显示
+1. 给 **父盒子** 设置合适的**高度、border、padding**；
 
-**清除浮动的方法**：
+2. 【推荐BFC】：给**父盒子添加样式  `overflow:hidden/auto;`**
 
-1. 给**父盒子**设置合适的**高度、border、padding**；
-
-2. 【推荐】给**父盒子添加样式 `overflow:hidden/auto;`**
-
-   （这个属性相当于触发BFC，让父级紧贴内容，包括使用了浮动的盒子）
-
-   （为了去除兼容性问题，会添加 IE 专有属性 - 缩放`zoom:1;`）
-
-3. 在父盒子里面最后的子盒子后面**添加一个子盒子**
+3. 在父盒子**里面最后的子盒子**后面 **再添加一个子盒子**
 
     ```css
-    .clear {
-    	clear: both;
-    }
+    .clear {clear: both;}  /* 位于所有的浮动元素之后，撑开了父级的高 */
     ```
 
 4. 采用**伪元素，给父元素追加`::after`**
 
-    ```css
-    /* 最简写法 */
-    .father::after {
-    	content:"";
-        display: block;
-        /* 表示元素的哪些边不应该挨着浮动框 - 撑开了父级 */
-        clear:both;
-    }
-    ```
+本质：和第三种一样，伪元素在也是在父盒子里面的末尾建立了一个可以撑开父级的伪元素
 
-    
+```css
+/* 最简写法 */
+.father::after {
+	content:"";
+    display: block;
+    clear:both; /* 表示块级元素的左右两边都不能有浮动元素 */
+}
+```
+
+
 
