css：单行、多行、多行溢出的省略号写法

--- a/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
+++ b/_posts/css相关内容/2019-07-14-文本不换行+显示省略号.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -15,43 +16,44 @@ typora-root-url: ..
 
 # 显示省略号
 
-```css
-/* 一行文本省略 */
-white-space: nowrap;
-text-overflow: ellipsis;
-overflow: hidden;
-```
-
-多行文本出现显示省略号后下面还有内容展示（给个 padding 值撑开盒子就会出现）：
+- 一行文本（三个属性缺一不可）：
 
 ```css
-/* 多行文本省略(ps：此处是两行) */
-text-overflow: -o-ellipsis-lastline;
-overflow: hidden;
-text-overflow: ellipsis;
-/* display: -webkit-box 必须结合的属性 ，将对象作为弹性伸缩盒子模型显示 */
-display: -webkit-box;
-/* line-clamp 用来限制在一个块元素显示的文本的行数 */
--webkit-line-clamp: 2;
-line-clamp: 2;
-/* box-orient 必须结合的属性 ，设置或检索伸缩盒对象的子元素的排列方式 */
--webkit-box-orient: vertical;
+single-line {
+    white-space: nowrap; /* white-space 指定两件事：空白字符是否合并+是否换行，以及如何合并/换行 */
+	text-overflow: ellipsis; /* 只对块级元素溢出有效，默认 clip（可能单词中间截断） */
+	overflow: hidden;
+}
 ```
+
+- 【不推荐，省略号下面有溢出显示的内容】多行文本（`text-overflow` 只对单行文本有效）：
+
+```css
+multi-line {
+	display: -webkit-box; /* 将对象作为弹性伸缩盒子模型显示 */
+	-webkit-box-orient: vertical; /* 设置或检索伸缩盒对象的子元素的排列方式 */
+	overflow: hidden;
+	-webkit-line-clamp: 3; /* 非标准webkit属性，设置块元素显式的文本行数(自带省略号) */
+}
+```
+
+-	多行文本 - 避免出现显示省略号下面还有内容的情况（如下图）
 
 <img src="/../img/assets_2019/image-20210628084145480.png" alt="image-20210628084145480" style="zoom:40%;" />
 
-更有甚优的解决方案： 利用高度和行高解决
-
 ```css
-width:400px;
-overflow : hidden;
-text-overflow: ellipsis;
-display: -webkit-box;
--webkit-line-clamp: 2;
--webkit-box-orient: vertical;
-line-height:30px;
-/* 高度=行高*行数（webkit-line-clamp） */
-height:60px;
+/* 利用高度和行高解决 */
+div {
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    -webkit-line-clamp: 3;
+    
+    /* 问题：出现省略号后的内容 */
+    padding: 20px
+    
+    /* 高度 = 行高 * 行数 - padding = 3*30px-20px */
+    line-height: 30px;
+    height: 70px;
+}
 ```
-
-<img src="/../img/assets_2019/image-20210628084414669.png" alt="image-20210628084414669" style="zoom:40%;" />
