--- a/_posts/css相关内容/2021-06-27-css3有哪些新特性.md
+++ b/_posts/css相关内容/2021-06-27-css3有哪些新特性.md
@@ -99,30 +99,7 @@ box-shadow: 10px 10px 5px #888888;
 
 2⃣️ 换行规则 - 强调的是怎么样来进行单词内的断句：`word-wrap: normal 允许在单词/url内换行 | break-word 只在允许的断字处换行;`
 
-3⃣️ 省略号：`text-overflow: clip|ellipsis|string`
-
-常见的多行超出省略号：
-
-```css
-/* 一行超出显示省略号：禁止换行，超出隐藏，超出省略号 */
-div {
-		white-space: nowrap;
-  	overflow: hidden;
-  	text-overflow: ellipsis;
-}
-/* 多行超出显示省略号 -- 利用高度和行高，避免出现显示省略号下面还有内容的情况 */
-div {
-  	width:400px;
-    overflow : hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    line-height:30px;
-  	/* 高度=行高*行数（webkit-line-clamp） */
-    height:60px;
-}
-```
+3⃣️ 省略号：具体看文章 [文本不换行+显示省略号](./2019-07-14-文本不换行+显示省略号.md)
 
 4⃣️ 文字阴影 `text-shadow:水平阴影，垂直阴影，模糊的距离，以及阴影的颜色`
 
