LTN：复习昨天内容，补充『』

--- a/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
+++ b/_posts/css相关内容/2019-07-11-为什么要清除浮动？怎么清除浮动？.md
@@ -23,7 +23,7 @@ typora-root-url: ..
 
 ##### 经常出现的问题：高度塌陷
 
-​	浮动元素不能撑开父级元素。子盒子浮动，导致的父盒子内高度为 0 ，父级盒子不能被撑开，发生 **高度塌陷** 的情况。具象化：父级盒子**背景**不能显示；**边框**不能撑开；**margin和padding**不能正确显示
+​	浮动元素不能撑开父级元素。子盒子浮动，导致的父盒子内高度为 0 ，父级盒子不能被撑开，发生 **高度塌陷** 的情况。具象化：父级盒子**背景**不能显示；『**边框**不能撑开；**margin和padding**不能正确显示』
 
 
 
@@ -31,7 +31,7 @@ typora-root-url: ..
 
 > 前两种分别是给父盒子添加高度/触发BFC重新排列，后两种都是在父级的末尾添加一个去除浮动的元素
 
-1. 给 **父盒子** 设置合适的**高度、border、padding**；
+1. 给 **父盒子** 设置合适的**高度、『<u>border</u>』、padding**；
 
 2. 【推荐BFC】：给**父盒子添加样式  `overflow:hidden/auto;`**
 
