css：两栏，左固定，右自适应布局方式

--- a/_posts/css相关内容/2021-06-26-flex布局.md
+++ b/_posts/css相关内容/2021-06-26-flex布局.md
@@ -55,7 +55,7 @@ flexbox 的特性是沿着**主轴或者交叉轴**对齐之中的元素
 
 【每个属性补充】：
 
-​	 `flex-basis` --> 定义了元素的 **空间大小**，即**项目将占据固定空间** --> 如果没有设置固定宽度，而是取默认设置 `auto` ，则默认**取元素内容的尺寸** --> flex容器里除了元素所占的空间以外的富余空间就是**可用空间**
+​	 `flex-basis` --> 定义了元素的 **空间大小**，即**项目将占据固定空间** --> 如果没有设置固定宽度，而是取默认设置 `auto` ，则默认**取元素内容的尺寸** --> flex容器里除了元素所占的空间以外的富余空间就是**可用空间**；设置为 0 时，flex 不再考虑当前 item 的内容，而是以整体考虑（可能会挤压到内容）
 
 ​	`flex-grow` --> `flex-grow` 若属性值是一个正整数，元素会以 `flex-basis` 为基础，沿主轴方向增加所占空间，**占据主轴上的可用空间** -->  `flex-grow` 属性可以**按比例分配空间**
 
@@ -66,7 +66,7 @@ flexbox 的特性是沿着**主轴或者交叉轴**对齐之中的元素
 | flex: initial【默认】    | flex: 0 1 auto | 不可放大，但可缩小                                           |
 | flex: auto               | flex: 1 1 auto | 既可以放大，也可以缩小                                       |
 | flex: none               | flex: 0 0 auto | 既不能放大，也不能缩小                                       |
-| flex: 1【最常见-自适应】 | flex: 1 1 0    | 可以在f lex-basis的基础上放大缩小<br>`flex-basis: 0` 相当于指定了宽度为 0 |
+| flex: 1【最常见-自适应】 | flex: 1 1 0    | 可以在flex-basis的基础上放大缩小<br>`flex-basis: 0` 相当于指定了宽度为 0 |
 
 ------
 
