--- a/_posts/css相关内容/2019-10-26-两栏，左边固定，右边自适应.md
+++ b/_posts/css相关内容/2019-10-26-两栏，左边固定，右边自适应.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -20,13 +21,13 @@ typora-root-url: ..
 
 ​	margin-left「float方法（左浮动，右margin-left）、绝对定位（左绝对，右margin-left）」
 
-​	flex布局「flex:0 0 200px和flex:1」
+​	flex布局「flex:1」
 
 ​	BFC特性「左浮动，右BFC」
 
-​	table/grid布局
+​	table/grid布局『table 需要给出 width:100% 否则宽度只和内容有关』
 
-​	calc() 方法
+​	calc() 方法『左右都浮动』
 
 
 
@@ -71,7 +72,7 @@ typora-root-url: ..
 <img src="/../img/assets_2023/image-20241015122549619.png" alt="image-20241015122549619" style="zoom:50%;" />
 
 ```css
-/* 原理：给左边绝对定位，脱离文档流，不占位置，给右侧外边距即可 */
+/* 原理：给左边绝对定位，脱离文档流，不占位置（宽度只与内容有关），给右侧外边距即可 */
 .left {
     position: absolute;
 }
@@ -80,9 +81,9 @@ typora-root-url: ..
 } 
 ```
 
-#### ③ flex布局：利用flex-basis和flex-grow
+#### ③ flex布局：flex-grow
 
-核心：`left` 有固定空间（`flex-basis: 200px`） + `right` 可放大占据空间（`flex-grow:1`）
+核心： `right` 可放大占据空间（`flex-grow:1`）
 
 > flex 属性是 `flex-grow`、`flex-shrink`、`flex-basis` 的简写：详情见 [flex布局](./2021-06-26-flex布局.md)
 
@@ -90,11 +91,13 @@ typora-root-url: ..
 .outer {
     display: flex;
 }
-.left {
-    flex: 0 0 200px; /* 不可放大也不可缩小，占据固定 200px 的空间 */
-}
 .right{
     flex: 1; /* flex: 1 1 0 的简写，可放大可缩小，撑开剩余空间 */
+}
+
+/* 非必要 - 已给出 left 的宽度 */
+.left {
+    flex: 0 0 200px; /* 不可放大也不可缩小，占据固定 200px 的空间 */
 }
 ```
 
@@ -117,7 +120,7 @@ typora-root-url: ..
 /* table */
 .outer{
     display: table;
-    width:100%; /* 注意：要给父级 width：100% 否则元素按照内容大小撑开 */
+    width:100%; /* 『注意：要给父级 width：100% 否则元素按照内容大小撑开』 */
 }
 .left, .right {
     display:table-cell;
@@ -137,7 +140,7 @@ typora-root-url: ..
 - 注意：`calc()` 的减号两边必须有空格，否则就无法计算
 
 ```css
-/* 双float + calc():左右侧都浮动，右侧的宽度由calc计算所得 */
+/* 双float + calc():『左右侧都浮动』，右侧的宽度由calc计算所得 */
 .left, .right{
     float: left;
 }
