css：选择器及其权重

--- a/_posts/css相关内容/2019-10-25-三栏，两边固定，中间自适应.md
+++ b/_posts/css相关内容/2019-10-25-三栏，两边固定，中间自适应.md
@@ -99,6 +99,10 @@ typora-root-url: ..
 .middle {
 	flex: 1; /* 中间盒子能够撑开剩余空间 */
 }
+/* 如果没设置宽度的话 */
+.outer {
+    justify-content: space-between;
+}
 ```
 
 #### ④ 左右浮动，中间BFC
