--- a/_posts/css相关内容/2021-06-19-CSS选择器 补充.md
+++ b/_posts/css相关内容/2021-06-19-CSS选择器 补充.md
@@ -1,7 +1,7 @@
 ---
 
 layout:     post
-title:     CSS 选择器
+title:     CSS 选择器 补充
 subtitle:  
 date:       2021-06-19
 author:     
@@ -17,18 +17,7 @@ typora-root-url: ..
 
 详情查看博客 https://segmentfault.com/a/1190000013424772
 
-要点/重点记录：
-
-- CSS 选择器是从右向左进行匹配的
-
-```css
-/* 先找到所有 h3 元素，再过滤父元素不是 .content 的，最后过滤掉 .content 不是 div 标签的 */
-div.content h3 {}
-```
-
-------
-
-- 组合器：四种可用的类型
+#### 组合器：四种可用的类型
 
 |                    | Combinators | Select                                                       |
 | ------------------ | ----------- | ------------------------------------------------------------ |
@@ -40,7 +29,7 @@ div.content h3 {}
 
 注：相邻兄弟选择器和通用兄弟选择器只会“向后”选择，DOM结构靠前的兄弟元素不在选择范围内。
 
-- 属性选择器【在实际中很少用到】
+#### 属性选择器【在实际中很少用到】
 
 根据元素的 属性和属性值来匹配元素，根据匹配属性值的方式，分为两类
 
@@ -54,7 +43,7 @@ div.content h3 {}
 |                        | [attr$=val]  | 选择attr属性的值**以val结尾（包括val）**的元素               |
 |                        | [attr*=val]  | 选择attr属性的值中**包含字符串val**的元素                    |
 
-- 伪类和伪元素
+#### 伪类和伪元素
 
 注：**每个选择器最多只能使用一个伪元素**，每个选择器**可以使用多个伪类**
 
@@ -65,3 +54,38 @@ div.content h3 {}
 2、伪元素：前缀是**两个冒号 (::)**  -> 添加到选择器后面达到**指定某个元素的某个部分**
 
 常见：::after、::before
+
+
+
+# CSS 选择器 伪类(hover)
+
+需求：用伪类实现一个小图标（需要不占位）
+
+实现：不好实现，改变的是元素样式
+
+一些知识点补充：
+
+#### 1、hover有很多书写方式，不同的书写方式可以改变不同关联的元素样式
+
+**元素:hover** `.box:hover` 表示聚焦后改变自己
+
+**元素:hover 元素** `.box:hover .child` 表示聚焦后 <u>改变其子元素</u>
+
+**元素:hover + 元素** `.box:hover+.bro`表示聚焦后改变其指定的“亲兄弟”（条件是 <u>该兄弟元素与其相邻</u>）元素
+
+**元素:hover ~ 元素** `.box:hover~.otherbro`表示聚焦后改变其 <u>指定的兄弟元素</u>，两个元素相不相邻都行
+
+```css
+.first:hover {color: white;}/* 聚焦我改变自己 */
+.three:hover .three-son {font-size: 20px;}/* 聚焦我改变我的子元素 */
+.two:hover+.three {color: white;}/* 聚焦我改变我相邻的兄弟元素 */
+.first:hover~.four {font-weight: 900;color: palegreen;}/* 聚焦我改变不相邻的兄弟元素*/
+```
+
+#### 2、hover 原理解析
+
+hover 是跟 DOM 绑定的，鼠标移动时，浏览器判断鼠标指针坐标是否在这个 DOM 的矩形范围内
+
+#### 3、hover 优先级
+
+优先级：LVHA，hover 要写在 :link 或者 :visited 之后，否则会被覆盖
