css：BFC 特性、触发条件，及怎么处理外边距折叠

--- a/_posts/css相关内容/2021-06-26-BFC.md
+++ b/_posts/css相关内容/2021-06-26-BFC.md
@@ -9,6 +9,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -23,10 +24,10 @@ typora-root-url: ..
 ### 一、BFC 特征：
 
 - ① 垂直排列：内部的盒子在**垂直方向**，从顶部开始**一个接一个**地放置
-- ② **和浮动元素不重合**：BFC的区域不会与浮动元素叠加；但计算 BFC 高度时，浮动元素也参与计算
+- ② 『**和浮动元素不重合**』：BFC的区域不会与浮动元素叠加；但计算 BFC 高度时，浮动元素也参与计算
     - 每个元素的margin box的左边， 与包含块border box的左边相接触，即使浮动模块也是如此
 
-- ③ 独立容器：BFC就是页面上的一个 **隔离的独立容器**，容器里面的子元素**不会影响到外面的元素**，反之亦然
+- ③ 『独立容器』：BFC就是页面上的一个 **隔离的独立容器**，容器里面的子元素**不会影响到外面的元素**，反之亦然
 
 常见问题：**外边距折叠**
 
@@ -36,10 +37,11 @@ typora-root-url: ..
 
 ### 二、怎么创建：
 
-- **浮动** (float不为 none）
-- **绝对定位元素** (position: absolute / fixed)
-- **display**： inline-block 行内块、table-cell 表格单元格、table-caption 表格标题、flex 弹性盒子
-- **overflow 除 visible的值**(overflow: hidden/auto/scroll)
+- 『**浮动** (float不为 none）』
+- 『**绝对定位元素** (position: absolute / fixed)』
+- **display**： inline-block 行内块、『table-cell 表格单元格、table-caption 表格标题、flex 弹性盒子』
+- **overflow 除 visible的值**(overflow: hidden/auto/『scroll』)
+- 『根元素』
 
 
 
@@ -61,10 +63,9 @@ typora-root-url: ..
 
 如上图所示，解决方案
 
-- 可以将两个盒子放在不同的 BFC 容器中
+- 1️⃣可以将两个盒子放在不同的 BFC 容器中
 
-- 解决方案： 父盒子给 flex，让两个盒子都变成弹性盒子，效果如图：
-
+- 2️⃣『父盒子给 flex』：让两个盒子都变成弹性盒子，效果如图
 
 <img src="/../img/assets_2019/image-20210619160047566.png" alt="image-20210619160047566" style="zoom:33%;" />
 
