css：性能优化（文件加载+代码写法两方面）

--- a/_posts/css相关内容/2021-06-26-Position属性 - 占位？相对什么定位？.md
+++ b/_posts/css相关内容/2021-06-26-Position属性 - 占位？相对什么定位？.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -17,7 +18,7 @@ typora-root-url: ..
 
 直接参考 MDN 介绍：https://developer.mozilla.org/zh-CN/docs/Learn/CSS/CSS_layout/Positioning
 
-Position有五个属性值，分别是static 、fixed、 relative 、absolute、sticky；
+Position有五个属性值，分别是static 、fixed、 relative 、absolute、『sticky』；
 
 | static                                                       | relative                                                     | absolute                                                     | fixed                                            | sticky                                                       |
 | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------------ | ------------------------------------------------------------ |
