css：水平垂直居中

--- a/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
+++ b/_posts/css相关内容/2021-06-29-子盒子在父盒子中水平垂直居中有几种方法？.md
@@ -8,6 +8,7 @@ header-img:
 catalog: true
 tags:
     - < CSS相关内容 >
+    - < LTN1 >
 typora-root-url: ..
 ---
 
@@ -15,88 +16,107 @@ typora-root-url: ..
 
 # 子盒子在父盒子中水平垂直居中有几种方法？
 
-### 1.定位position+margin外边距（需要知道子盒子的宽高）
-
-```css
-/*父盒子*/
-position: relative;
+```html
+<head>
+    <style>
+        .father {
+            width: 800px;
+            height: 650px;
+        }
+        .child {
+            width: 300px;
+            height: 150px;
+        }
+    </style>
+</head>
+<body>
+    <div class="father">
+        <div class="child">子盒子</div>
+    </div>
+</body>
 ```
 
-```css
- /*子盒子*/
- position: absolute;            
- top: 50%;            
- left: 50%;            
- margin-top: -50px;            
- margin-left: -50px;
-```
+### 1️⃣不需要知道子盒宽高
 
-### 2.定位position+transform**（不需要知道宽高）**
+#### 1.flex布局
 
 ```css
-/*父盒子*/
-position: relative;
-```
-
-```css
-/*子盒子*/
-position: absolute;            
-top: 50%;            
-left: 50%;            
-transform: translate(-50%,-50%);
-/* 在已知子盒子宽高的情况下， transform 可以改为 margin -> 性能考虑 */
-margin: -51px 0 0 -51px;
-```
-
-### 3.flex布局（不需要知道宽高）
-
-```css
-/*父盒子*/ 
-display: flex;
-justify-content: center; 
-align-items: center;
-```
-
-### 4.margin:auto + position 四个值为0（不需要知道宽高）
-
-父盒子需要高度，子盒子本身需要宽高；
-
-设置margin自动适应，然后设置定位的上下左右都为0，就如四边均衡受力从而实现盒子的居中；
-
-```css
- position: absolute;        
- left:0;        
- right:0;        
- top: 0;        
- bottom: 0;       
- margin: auto;
-```
-
-### 5.table-cell 布局
-
-将父盒子设置为 `table-cell` (能够使元素呈单元格的样式显示)，并设置 `text-align: center` (使内容水平居中)；`vertical-align: middle` (使内容垂直居中);。子盒子设置为 `inline-block` 可以使其内容变为文本格式，也可设置宽高；
-
-```css
-.father{    
-	display: table-cell;    
-	width: 400px;    
-	height: 400px;  
-    /* 垂直居中 */
-	vertical-align: middle;     
-    /* 水平居中 */
-	text-align: center;
+/* 父盒子 */
+.father {
+    display: flex;
+    justify-content: center; 
+	align-items: center;
 }
 ```
 
-### 行内元素的一些居中属性
+#### 2.绝对定位 + transform-50%
 
 ```css
-/* 行元素 - 给父级加，使文本/图片居中  */
-text-align ：center；
-/* 块元素 - 给当前元素加，当前元素必须有宽度 */
-margin ：0 auto；
-/* 行元素（单行） - 行高=盒子高度 */
+.father {
+    position: relative;
+}
+/* 子盒子 */
+.child {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+```
+
+```css
+/* 在已知子盒子宽高的情况下， transform 可以改为 margin -> 性能考虑 */
+.child {
+	margin: -75px 0 0 -150px;
+}
+```
+
+#### 3.绝对定位 四个方向0 + margin:auto
+
+```css
+.father {
+    position: relative;
+}
+/* 子盒子 */
+.child {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto; /* 四边均衡受力从而实现盒子的居中 */
+}
+```
+
+#### 4.table-cell + 文本格式
+
+```css
+.father {
+    display: table-cell; /* 能够使元素呈单元格的样式显示 */
+    vertical-align: middle; /* 内容垂直居中 */
+    text-align: center; /* 内容水平居中 */
+}
+.child {
+    display: inline-block; /* 使其内容变为文本格式，但仍旧可以设置宽高 */
+}
+```
+
+
+
+### 2️⃣行内元素的一些居中属性
+
+```css
+text-align: center；
+vertical-align: middle;
+
 line-height: 100px;
 height: 100px;
+```
+
+### 3⃣️块元素的一些居中属性
+
+```css
+/* 当前元素必须有宽度 */
+margin ：0 auto；
 ```
 
