--- a/_posts/css相关内容/2024-05-07-rem是基于什么原理进行适配的.md
+++ b/_posts/css相关内容/2024-05-07-rem是基于什么原理进行适配的.md
@@ -2,7 +2,7 @@
 layout:     post
 title:     rem是基于什么原理进行适配的？
 subtitle:  
-date:       2024-07-09
+date:       2024-05-07
 author:     
 header-img: 
 catalog: true
@@ -15,25 +15,21 @@ typora-root-url: ..
 
 # rem是基于什么原理进行适配的
 
-##### 问题：
+​	css中常见的几个单位 px、em、rem，px是固定像素 - **绝对长度单位**（还有pc、pts、in…），无法因为页面大小改变；
 
-rem和em两个单位经常放在一起比较，简单梳理下
-
-##### 回答：
-
-css中常见的几个单位 px、em、rem，px是固定像素 - **绝对长度单位**（还有pc、pts、in…），无法因为页面大小改变；
-
-rem 和 em 都是 **相对长度单位**（还有vw、vh、%…）：rem相对于根节点，em相对于父元素
+​	rem 和 em 都是 **相对长度单位**（还有vw、vh、%…）
 
 ##### 详解：
 
 #### 🆚 em相对于父元素
 
-1. **子元素** `font-size` 设置`em`单位，是相对于 **父元素** 的的字体大小
-2. 当前元素的 `width/height/padding/margin` 设置`em`单位，是相对于当前元素的字体大小
+1. **子元素** `font-size` 设置`em`单位，是 **相对于父元素** 的的字体大小
+2. 当前元素的 `width/height/padding/margin` 设置`em`单位，是相对于 **当前元素** 的字体大小
 
-##### 背景补充：chrome 显示的最小字体是12px，低于12px的字体大小会被默认为12px
+- 补充：chrome 显示的最小字体是12px，低于12px的字体大小会被默认为12px
 
 #### 🆚 rem相对于根节点
 
-1. 根节点是 root，也就是 <html> 元素 -> 用 rem 做响应式时，在 媒体查询中直接改变 html 元素的 `font-size` 就可以实现
+根节点是 root，也就是 `<html> `元素 
+
+用 rem 做响应式时，在 媒体查询中直接改变 `<html>` 元素的 `font-size` 就可以实现
